<resources>
    <string name="app_name">Digital Room Call</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mitra Sentosa Teknologi</string>
    <string name="nav_header_subtitle">Digital Room Call</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="jadwal">Jadwal</string>
    <string name="ruangan">Ruangan</string>
    <string name="nada">Nada</string>
    <string name="belmanual">Bel Manual</string>
    <string name="minggu">Minggu</string>
    <string name="sabtu">Sabtu</string>
    <string name="jumat">Jumat</string>
    <string name="kamis">Kamis</string>
    <string name="rabu">Rabu</string>
    <string name="selasa">Selasa</string>
    <string name="senin">Senin</string>
    <string name="cancel">Cancel</string>
    <string name="simpan">Simpan</string>
    <string name="tambah_jadwal">Tambah Jadwal</string>
    <string name="pilih_nada">Pilih Nada</string>
    <string name="nama_jadwal">Nama Jadwal</string>
    <string name="min">MIN</string>
    <string name="sab">SAB</string>
    <string name="jum">JUM</string>
    <string name="kam">KAM</string>
    <string name="rab">RAB</string>
    <string name="sel">SEL</string>
    <string name="sen">SEN</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>