<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="0dp"
    android:layout_weight="1"
    android:layout_height="wrap_content">
    <CheckBox
        android:id="@+id/chksenin"
        android:text="@string/senin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/chkselasa"
        android:text="@string/selasa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/chkrabu"
        android:text="@string/rabu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/chkkamis"
        android:text="@string/kamis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/chkjumat"
        android:text="@string/jumat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/chksabtu"
        android:text="@string/sabtu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/chkminggu"
        android:text="@string/minggu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>