<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_manual"
            android:icon="@drawable/ic_baseline_notifications_active_24"
            android:title="@string/belmanual" />
        <item
            android:id="@+id/nav_ruangan"
            android:icon="@drawable/ic_baseline_room_preferences_24"
            android:title="@string/ruangan" />
        <item
            android:id="@+id/nav_jadwal"
            android:icon="@drawable/ic_baseline_schedule_24"
            android:title="@string/jadwal" />

        <item
            android:id="@+id/nav_nada"
            android:icon="@drawable/ic_baseline_library_music_24"
            android:title="@string/nada" />
    </group>
</menu>