<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="25dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_cancel"
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_baseline_undo_24"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon" />
            <TextView

                android:layout_centerInParent="true"
                android:text="@string/tambah_jadwal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:layout_alignParentRight="true"
                android:id="@+id/btn_simpan_jadwal"
                android:text="@string/simpan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                app:icon="@drawable/ic_baseline_save_alt_24"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon" />
        </RelativeLayout>


        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/layoutAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TimePicker
                android:layout_gravity="center"
                android:id="@+id/time_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggleButtonHari"
                android:layout_gravity="center"
                app:selectionRequired="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/chksenin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sen"
                    android:tag="chksenin"
                    style="?attr/materialButtonOutlinedStyle"
                    />
                <Button
                    android:id="@+id/chkselasa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sel"
                    android:tag="chkselasa"
                    style="?attr/materialButtonOutlinedStyle"
                    />
                <Button
                    android:id="@+id/chkrabu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rab"
                    android:tag="chkrabu"
                    style="?attr/materialButtonOutlinedStyle"
                    />
                <Button
                    android:id="@+id/chkkamis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kam"
                    android:tag="chkkamis"
                    style="?attr/materialButtonOutlinedStyle"
                    />
                <Button
                    android:id="@+id/chkjumat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jum"
                    android:tag="chkjumat"
                    style="?attr/materialButtonOutlinedStyle"
                    />
                <Button
                    android:id="@+id/chksabtu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sab"
                    android:tag="chksabtu"
                    style="?attr/materialButtonOutlinedStyle"
                    />
                <Button
                    android:id="@+id/chkminggu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min"
                    android:tag="chkminggu"
                    style="?attr/materialButtonOutlinedStyle"
                    />
            </com.google.android.material.button.MaterialButtonToggleGroup>
            <EditText
                android:id="@+id/txt_nama_jadwal"
                android:layout_width="match_parent"
                android:hint="@string/nama_jadwal"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:padding="10dp"
                    android:id="@+id/txt_nada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:text="@string/pilih_nada"
                    android:id="@+id/btn_nada_jadwal"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_baseline_music_note_24"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon" />
            </LinearLayout>
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:layout_gravity="center"
                    app:selectionRequired="true"
                    android:id="@+id/toggleButtonRuangan"
                    app:singleSelection="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </com.google.android.material.button.MaterialButtonToggleGroup>
            </HorizontalScrollView>


            <androidx.recyclerview.widget.RecyclerView
                android:clickable="false"
                android:id="@+id/recycler_view_ruangans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="350dp"/>
        </LinearLayout>
        <Button
            android:layout_gravity="center"
            android:id="@+id/btn_hapus_jadwal"
            android:text="Hapus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_delete_24"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
    </LinearLayout>
</ScrollView>